--- a/template/index.html
+++ b/template/index.html
@@ -17,7 +17,8 @@
   <nav class="teal darken-3">
     <div class="nav-wrapper container"><a class="brand-logo center" href="#!">TABS v SPACES</a>
       <ul class="left" id="nav-mobile">
-        <button class="waves-effect waves-light btn" id="signInButton">Sign In with Google</button>
+        <button class="waves-effect waves-light btn" id="signInButton" onclick="toggle()">Sign In with Google</button>
+
       </ul>
     </div>
   </nav>
@@ -54,11 +55,14 @@
   </div>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      <!-- add Event Listener "click" to the vote -->
-      // document.getElementById("voteTabs").addEventListener("click", function () {
-      //   vote("TABS");
-      // });
-    })
-  </script>
+      document.getElementById("voteTabs").addEventListener("click", function () {
+        vote("TABS");
+      });
+      document.getElementById("voteSpaces").addEventListener("click", function () {
+        vote("SPACES");
+      });
+    });
+</script>
+
 </body>
 </html>
